# space_cleanup

./: Cargo.toml  LICENSE  compile_andorid.sh
data/: player.json
src/: game.rs  main.rs  object.rs  player.rs  space_objects.rs  timer.rs
