[package]
name = "space_cleanup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
egui-macroquad = "0.15.0"
rand = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
