[package]
name = "space_cleanup"
version = "0.1.0"
edition = "2021"
description = "A game to avoid asteroids while collecting scraps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
egui-macroquad = "0.15.0"
macroui = { git = "https://github.com/Tolya05/macroui.git" }
rand = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.bundle]
name = "SpaceCleanup"
identifier = "com.anatoliyk.space_cleanup"
icon = ["64x64.png", "128x128.png"]
resources = ["res/player.png", "res/asteroid.png", "res/junk1.png", "res/music/*.wav", "res/sounds/*.wav"]
category = "game"
short_description = "A game to avoid asteroids while collecting scraps"
